[package]
name = "risingwave_common"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
arrow-52-array = { package = "arrow-array", version = "52" }
arrow-52-buffer = { package = "arrow-buffer", version = "52" }
arrow-52-cast = { package = "arrow-cast", version = "52" }
arrow-52-schema = { package = "arrow-schema", version = "52" }
arrow-54-array = { package = "arrow-array", version = "54" }
arrow-54-buffer = { package = "arrow-buffer", version = "54" }
arrow-54-cast = { package = "arrow-cast", version = "54" }
arrow-54-schema = { package = "arrow-schema", version = "54" }
async-trait = { workspace = true }
auto_enums = { workspace = true }
auto_impl = { workspace = true }
bitfield-struct = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["clock", "std"] }
chrono-tz = { workspace = true, features = ["case-insensitive"] }
clap = { workspace = true }
comfy-table = { workspace = true }
crc32fast = { workspace = true }
easy-ext = { workspace = true }
educe = { workspace = true }
either = { workspace = true }
enum-as-inner = { workspace = true }
enumflags2 = { workspace = true }
ethnum = { workspace = true, features = ["serde"] }
fixedbitset = { workspace = true }
foyer = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
governor = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
itertools = { workspace = true }
itoa = { workspace = true }
jiff = { workspace = true }
jsonbb = { workspace = true }
lru = { workspace = true }
memcomparable = { workspace = true, features = ["decimal"] }
num-integer = { workspace = true }
num-traits = { workspace = true }
number_prefix = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
parking_lot = { workspace = true }
parse-display = { workspace = true }
paste = { workspace = true }
pin-project-lite = { workspace = true }
postgres-types = { workspace = true, features = ["derive", "with-chrono-0_4", "with-serde_json-1"] }
prometheus = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
risingwave-fields-derive = { workspace = true }
risingwave_common_estimate_size = { workspace = true }
risingwave_common_metrics = { workspace = true }
risingwave_common_proc_macro = { workspace = true }
risingwave_common_secret = { workspace = true }
risingwave_error = { workspace = true }
risingwave_license = { workspace = true }
risingwave_pb = { workspace = true }
risingwave_telemetry_event = { workspace = true }
rust_decimal = { workspace = true, features = ["db-postgres", "maths"] }
rw_iter_util = { workspace = true }
rw_resource_util = { workspace = true }
ryu = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_default = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
smallbitset = { workspace = true }
smallvec = { workspace = true }
speedate = { workspace = true }
stacker = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
sysinfo = { workspace = true, features = ["system"] }
thiserror = { workspace = true }
thiserror-ext = { workspace = true }
tinyvec = { workspace = true, features = ["rustc_1_55", "grab_spare_slice"] }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
tokio-retry = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true, features = ["futures-03"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
twox-hash = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }
http-body = "0.4.5"
tower-layer = "0.3.3"
tower-service = "0.3.3"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17", default-features = false }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
darwin-libproc = { git = "https://github.com/risingwavelabs/darwin-libproc.git", rev = "a502be24bd0971463f5bcbfe035a248d8ba503b7" }
libc = "0.2"
mach2 = "0.4"

[dev-dependencies]
coarsetime = { workspace = true }
criterion = { workspace = true }
expect-test = { workspace = true }
more-asserts = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
rusty-fork = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "bench_encoding"
harness = false

[[bench]]
name = "bitmap"
harness = false

[[bench]]
name = "bench_hash_key_encoding"
harness = false

[[bench]]
name = "bench_column_aware_row_encoding"
harness = false

[[bench]]
name = "bench_data_chunk_encoding"
harness = false

[[bench]]
name = "bench_data_chunk_compact"
harness = false

[[bench]]
name = "bench_array"
harness = false

[[bench]]
name = "bench_sequencer"
harness = false

[[bench]]
name = "bench_lru"
harness = false

[lints]
workspace = true
