[package]
name = "risingwave_compute"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["workspace-hack"]

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
await-tree = { workspace = true }
chrono = { version = "0.4" }
clap = { workspace = true }
either = "1"
foyer = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-async-stream = { workspace = true }
http = "1"
hyper = "1"
itertools = { workspace = true }
maplit = "1.0.2"
pprof = { version = "0.14", features = ["flamegraph"] }
prometheus = { version = "0.13" }
prost = { workspace = true }
risingwave_batch = { workspace = true }
risingwave_common = { workspace = true }
risingwave_common_heap_profiling = { workspace = true }
risingwave_common_service = { workspace = true }
risingwave_connector = { workspace = true }
risingwave_dml = { workspace = true }
risingwave_hummock_sdk = { workspace = true }
risingwave_jni_core = { workspace = true }
risingwave_pb = { workspace = true }
risingwave_rpc_client = { workspace = true }
risingwave_storage = { workspace = true }
risingwave_stream = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror-ext = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { version = "0.5", features = ["util", "load-shed"] }
tracing = "0.1"
uuid = { version = "1.11.0", features = ["v4"] }

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }

[dev-dependencies]
futures-async-stream = { workspace = true }
rand = { workspace = true }
risingwave_hummock_sdk = { workspace = true }
tempfile = "3"

[lints]
workspace = true
