[package]
name = "risingwave_compute"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
await-tree = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
either = { workspace = true }
foyer = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
futures-async-stream = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
pprof = { workspace = true, features = ["flamegraph"] }
prometheus = { workspace = true }
prost = { workspace = true }
risingwave_batch = { workspace = true }
risingwave_batch_executors = { workspace = true }
risingwave_common = { workspace = true }
risingwave_common_heap_profiling = { workspace = true }
risingwave_common_service = { workspace = true }
risingwave_connector = { workspace = true }
risingwave_dml = { workspace = true }
risingwave_hummock_sdk = { workspace = true }
risingwave_jni_core = { workspace = true }
risingwave_pb = { workspace = true }
risingwave_rpc_client = { workspace = true }
risingwave_storage = { workspace = true }
risingwave_stream = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror-ext = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true, features = ["util", "load-shed"] }
tracing = { workspace = true }

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }

[dev-dependencies]
futures-async-stream = { workspace = true }
rand = { workspace = true }
risingwave_common_rate_limit = { workspace = true }
risingwave_hummock_sdk = { workspace = true }
tempfile = { workspace = true }
tokio-retry = { workspace = true }

[lints]
workspace = true
