[package]
name = "risingwave_connector"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
all-sinks = ["sink-deltalake"]
all-sources = []
sink-deltalake = ["dep:deltalake"]

[dependencies]
anyhow = "1"
apache-avro = { workspace = true }
assert_matches = "1"
async-compression = { version = "0.4.5", features = ["gzip", "tokio"] }
async-nats = "0.41"
async-trait = "0.1"
auto_enums = { workspace = true }
auto_impl = "1"
await-tree = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-msk-iam-sasl-signer = "1.0.0"
aws-sdk-dynamodb = "1"
aws-sdk-glue = { workspace = true }
aws-sdk-kinesis = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
aws-smithy-types = { workspace = true }
aws-smithy-types-convert = { version = "0.60.1", features = ["convert-chrono"] }
aws-types = { workspace = true }
base64 = "0.22"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
cfg-if = "1"
cfg-or-panic = "0.2"
chrono = { workspace = true, features = [
    "clock",
    "std",
] }
clickhouse = { git = "https://github.com/risingwavelabs/clickhouse.rs", rev = "f05029d2cb65164d61fa8699dd955f808375a618", features = [
    "time",
] }
csv = "1.3"
deltalake = { workspace = true, optional = true }
duration-str = "0.17.0"
easy-ext = "1"
either = "1"
elasticsearch = { version = "8.17.0-alpha.1", features = ["rustls-tls"] }
enum-as-inner = "0.6"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-async-stream = { workspace = true }
gcp-bigquery-client = "0.18.0"
glob = "0.3"
google-cloud-bigquery = { package = "gcloud-bigquery", version = "1", features = [
    "auth",
] }
google-cloud-gax = { package = "gcloud-gax", version = "1" }
google-cloud-googleapis = { package = "gcloud-googleapis", version = "1", features = [
    "pubsub",
    "bigquery",
] }
google-cloud-pubsub = { package = "gcloud-pubsub", version = "1" }
iceberg = { workspace = true }
iceberg-catalog-glue = { workspace = true }
iceberg-catalog-rest = { workspace = true }
indexmap = { version = "2.9.0", features = ["serde"] }
itertools = { workspace = true }
jni = { version = "0.21.1", features = ["invocation"] }
maplit = "1.0.2"
moka = { version = "0.12.10", features = ["future"] }
mongodb = "3.2.3"
mysql_async = { workspace = true }
mysql_common = { version = "0.32", default-features = false, features = [
    "chrono",
] }
nexmark = { version = "0.2", features = ["serde"] }
num-bigint = "0.4"
opendal = { workspace = true, features = [
    "executors-tokio",
    "services-azblob",
    "services-fs",
    "services-gcs",
    "services-memory",
    "services-s3",
    "services-webhdfs",
] }
opensearch = { version = "2.3.0", features = ["rustls-tls"] }
openssl = "0.10.72"
parking_lot = { workspace = true }
parquet = { workspace = true }
paste = "1"
pg_bigdecimal = { git = "https://github.com/risingwavelabs/rust-pg_bigdecimal", rev = "0b7893d88894ca082b4525f94f812da034486f7c" }
phf = { version = "0.11", features = ["macros"] }
postgres-openssl = "0.5.0"
prometheus = { version = "0.14", features = ["process"] }
prost = { workspace = true, features = ["no-recursion-limit"] }
prost-reflect = { version = "0.15", features = ["serde"] }
prost-types = "0.13"
pulsar = { version = "6.3", default-features = false, features = [
    "tokio-runtime",
    "telemetry",
    "auth-oauth2",
    "lz4",
    "zstd",
] }
rdkafka = { workspace = true, features = [
    "cmake-build",
    "ssl",
    "gssapi",
    "zstd",
] }
redis = { workspace = true, features = [
    "aio",
    "tokio-comp",
    "async-std-comp",
    "cluster-async",
    "geospatial",
] }
regex = { workspace = true }
reqwest = { version = "0.12.2", features = ["json", "stream"] }
risingwave_common = { workspace = true }
risingwave_common_estimate_size = { workspace = true }
risingwave_common_rate_limit = { workspace = true }
risingwave_connector_codec = { workspace = true }
risingwave_jni_core = { workspace = true }
risingwave_meta_model = { workspace = true }
risingwave_pb = { workspace = true }
risingwave_rpc_client = { workspace = true }
rumqttc = { version = "0.24.0", features = ["url"] }
rust_decimal = "1"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
rustls-pki-types = "1"
rw_futures_util = { workspace = true }
scopeguard = "1"
sea-orm = { workspace = true }
sea-schema = { version = "0.16", default-features = false, features = [
    "discovery",
    "sqlx-postgres",
    "sqlx-mysql",
] }
serde = { version = "1", features = ["derive", "rc"] }
serde_derive = "1"
serde_json = "1"
serde_with = { version = "3", features = ["json"] }
simd-json = { version = "0.15.0", features = ["hints"] }
smallvec = { workspace = true }
sqlx = { workspace = true }
strum = "0.27"
strum_macros = "0.27"
tempfile = "3"
thiserror = { workspace = true }
thiserror-ext = { workspace = true }
# To easiy get the type_name and impl IntoSql for rust_decimal, we fork the crate.
# Another reason is that we are planning to refactor their IntoSql trait to allow specifying the type to convert.
tiberius = { git = "https://github.com/risingwavelabs/tiberius.git", rev = "59350b92775a61611cf1fc3a5d0ff38bf264e6ac", default-features = false, features = [
    "chrono",
    "sql-browser-tokio",
    "rustls",
    "rust_decimal",
    "bigdecimal",
    "tds73",
    "time",
] }
time = "0.3.30"
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
tokio-retry = "0.3"
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "io"] }
tonic = { workspace = true }
tracing = "0.1"
typed-builder = "^0.21"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "fast-rng"] }
with_options = { path = "./with_options" }
yup-oauth2 = "8.3"

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }

[dev-dependencies]
assert_matches = "1"
criterion = { workspace = true, features = ["async_tokio", "async"] }
deltalake = { workspace = true }
expect-test = "1"
fs-err = "3"
paste = "1"
pretty_assertions = "1"
proc-macro2 = "1.0"
quote = "1"
rand = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
syn = { version = "2", features = ["full"] }
tempfile = "3"
tracing-subscriber = "0.3"
tracing-test = "0.2"
walkdir = "2"

[build-dependencies]
# Workaround for datafusion. Feel free to remove it if you can.
# https://gist.github.com/xiangjinwu/65c310adf84c381c17d99cb4439e1908
chrono-tz = { version = "0.10", features = ["case-insensitive"] }

[[bench]]
name = "debezium_json_parser"
harness = false

[[bench]]
name = "nexmark_integration"
harness = false

[[bench]]
name = "json_parser_case_insensitive"
harness = false

[[bench]]
name = "json_vs_plain_parser"
harness = false

[lints]
workspace = true
