[package]
name = "risingwave_ctl"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["workspace-hack"]

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
clap = { workspace = true }
comfy-table = "7"
etcd-client = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hex = "0.4"
inquire = "0.7.0"
itertools = { workspace = true }
memcomparable = "0.2"
prost = { workspace = true }
regex = "1.10.0"
risingwave_common = { workspace = true }
risingwave_connector = { workspace = true }
risingwave_frontend = { workspace = true }
risingwave_hummock_sdk = { workspace = true }
risingwave_meta = { workspace = true }
risingwave_meta_model_migration = { workspace = true }
risingwave_meta_model_v2 = { workspace = true }
risingwave_object_store = { workspace = true }
risingwave_pb = { workspace = true }
risingwave_rpc_client = { workspace = true }
risingwave_storage = { workspace = true }
risingwave_stream = { workspace = true }
sea-orm = { workspace = true }
serde = "1"
serde_json = "1"
serde_yaml = "0.9.25"
size = "0.4"
thiserror-ext = { workspace = true }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }

[dev-dependencies]
risingwave_hummock_sdk = { workspace = true }

[lints]
workspace = true

[lib]
test = false
